--- a/index.html
+++ b/index.html
@@ -21,6 +21,42 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
       </nav>
+
+      <div class="burger-icon">
+        <svg
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 18L20 18"
+              stroke="#000000"
+              stroke-width="2"
+              stroke-linecap="round"
+            ></path>
+            <path
+              d="M4 12L20 12"
+              stroke="#000000"
+              stroke-width="2"
+              stroke-linecap="round"
+            ></path>
+            <path
+              d="M4 6L20 6"
+              stroke="#000000"
+              stroke-width="2"
+              stroke-linecap="round"
+            ></path>
+          </g>
+        </svg>
+      </div>
     </header>
 
     <section id="home-section">
@@ -57,10 +93,8 @@
               <p>
                 Fast, Powerful & Most Secure Network Solutions for Smart Home &
                 Businesses
-                </p>
-                <a href="#">
-                    Read More
-                </a>
+              </p>
+              <a href="#"> Read More </a>
             </div>
           </div>
           <div class="card card-2">
@@ -70,10 +104,8 @@
               <p>
                 Fast, Powerful & Most Secure Network Solutions for Smart Home &
                 Businesses
-                </p>
-                <a href="#">
-                    Read More
-                </a>
+              </p>
+              <a href="#"> Read More </a>
             </div>
           </div>
           <div class="card">
@@ -83,54 +115,46 @@
               <p>
                 Fast, Powerful & Most Secure Network Solutions for Smart Home &
                 Businesses
-                </p>
-                <a href="#">
-                    Read More
-                </a>
+              </p>
+              <a href="#"> Read More </a>
             </div>
           </div>
         </div>
         <div class="service-cards-row">
-            <div class="card">
-              <img src="./images/icons/web.svg" alt="" />
-              <div class="card-text">
-                <h5>Website UI</h5>
-                <p>
-                  Fast, Powerful & Most Secure Network Solutions for Smart Home &
-                  Businesses
-                  </p>
-                  <a href="#">
-                      Read More
-                  </a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/icons/web.svg" alt="" />
-              <div class="card-text">
-                <h5>Website UI</h5>
-                <p>
-                  Fast, Powerful & Most Secure Network Solutions for Smart Home &
-                  Businesses
-                  </p>
-                  <a href="#">
-                      Read More
-                  </a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/icons/web.svg" alt="" />
-              <div class="card-text">
-                <h5>Website UI</h5>
-                <p>
-                  Fast, Powerful & Most Secure Network Solutions for Smart Home &
-                  Businesses
-                  </p>
-                  <a href="#">
-                      Read More
-                  </a>
-              </div>
+          <div class="card">
+            <img src="./images/icons/web.svg" alt="" />
+            <div class="card-text">
+              <h5>Website UI</h5>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <a href="#"> Read More </a>
             </div>
           </div>
+          <div class="card">
+            <img src="./images/icons/web.svg" alt="" />
+            <div class="card-text">
+              <h5>Website UI</h5>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <a href="#"> Read More </a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/icons/web.svg" alt="" />
+            <div class="card-text">
+              <h5>Website UI</h5>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <a href="#"> Read More </a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
